Fix card shadows on firefox

--- a/src/app/components/landing/Card.module.css
+++ b/src/app/components/landing/Card.module.css
@@ -1,11 +1,17 @@
-.card {
+.cardAndShadow {
 	width: 250px;
 	height: 320px;
 	position: relative;
 	display: block;
-	filter: drop-shadow(4px 4px 8px var(--theme-shadow-color));
 	transform-style: preserve-3d;
 	transform-origin: center;
+	overflow: visible;
+}
+
+.card {
+	width: 250px;
+	height: 320px;
+	position: relative;
 	transition: transform 0.15s ease-out, filter 0.15s ease-out;
 	will-change: transform;
 	backface-visibility: hidden;
@@ -18,8 +24,26 @@
 	transform: none !important;
 }
 
-.card:hover {
-	filter: drop-shadow(5px 7px 10px var(--theme-shadow-color));
+.shadow {
+	width: 101%;
+	height: 101%;
+	border-radius: 25px;
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	transform: translate3d(0px, -8px, -20px);
+	filter: blur(9px);
+	transition: transform 0.15s ease-out, filter 0.15s ease-out, width 0.15s ease-out, height 0.15s ease-out;
+	background-color: var(--theme-shadow-color);
+	pointer-events: none;
+}
+
+.card:hover + .shadow {
+	width: 103%;
+	height: 103%;
+	transform: translate3d(0px, -6px, -20px);
+	filter: blur(12px);
 }
 
 .cardSideWrap {
